# weather-api-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.dist  pyproject.toml
project/: asgi.py  urls.py  wsgi.py
project/app/shared/: __init__.py  apps.py
project/app/weather/: __init__.py  apps.py  utils.py  views.py
project/app/weather/tests/: test_utils.py  test_views.py
project/settings/: base.py  prod.py
